--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -101,6 +101,7 @@ jobs:
         clean: false      # without this checkout deletes empty folders after each use. # Default: true
         # fetch-depth: 0    # Number of commits to fetch. 0 indicates all history for all branches and tags. # Default: 1
         # fetch-tags: true  # Whether to fetch tags, even if fetch-depth > 0. # Default: false
+        token: ${{ secrets.GITHUB_TOKEN }}
 
   # <---------------------------------------------- Upload artifact of mod to be zipped ---------------------------------------------->
   # upload the release artifact to memory, this is whats seen on the actions summary page under Artifacts
@@ -205,7 +206,7 @@ jobs:
         git config --global user.email 'monish05m@gmail.com'
         cp folder_changelog/full/CHANGELOGS.md CHANGELOGS.md
         git add CHANGELOGS.md
-        git commit -m "${{ github.ref }} - Auto Bot Updated CHANGELOGS.md"
-        git push
+        git commit -m "${{ github.ref_name }} - Auto Bot Updated CHANGELOGS.md"
+        git push origin main
 
   # git pull origin main
