--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -223,7 +223,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.consolegalaxy-PAT }}
         repository: ${{ github.repository }}
   
   # <---------------------------------------------- Download artifacts ---------------------------------------------->
