--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,15 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
+            // Needs Step 2 from "Running and debugging".
+            // https://starsector.fandom.com/wiki/IntelliJ_IDEA_Setup#Running_and_debugging
             "type": "java",
-            "name": "Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        }
+            "name": "Attach to Starsector",
+            "request": "attach",
+            "hostName": "localhost",
+            "port": 5005,
+            "preLaunchTask": "${defaultBuildTask}",
+        },
     ]
 }
